--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png+xml" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>ТМПК
+      Биллинг
+    </title>
   </head>
   <body>
     <div id="root"></div>
